Modificacion color fondo y titulos y agrega parrafo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 
 </head>
 <body>
-	<h1>
-		<p>CALENDARIO -2017-</p>
-	<h2>
-		<p>Calendario mensual para el año 2017. Gentileza de dev-code</p>
-	</h2>
+	<h1>-CALENDARIO AÑO 2017</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora aut totam voluptatum, laudantium ea! Molestias error temporibus sit fugit inventore cupiditate tempore similique eligendi obcaecati vitae quos officiis, aspernatur, dolore.
+	</p>
 
-	</h1>
 </body>
 </html>
 
